--- a/style.css
+++ b/style.css
@@ -1,22 +1,36 @@
+h1{
+
+}
+span{
+    font-style: italic;
+}
+.container{
+    border: solid red;
+}
+
 .stack1{
-    border:solid;
+    border:solid green;
     display: flex;
     flex-direction: column;
-    
-    width: 80vw;
-    height:30vh;
-
+    justify-content: space-between;
+    position: fixed;
+    z-index:2;
+    width: 25vw;
+    height:60vh;
+margin-left:35%;
 }
 .stack2{
-    border:solid;
+    border:solid orange;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     width: 80vw;
     height:30vh;
-
+margin-left:8%;
 }
 .card{
-    border:solid;
-    height:25%;
-    width: 25%;
+    border:solid blue;
+    height:250px;
+    width: 150px;
+    border-radius: 10%
 }
