--- a/style.css
+++ b/style.css
@@ -1,36 +1,46 @@
 h1{
-
+font-size: 3em;
 }
 span{
     font-style: italic;
 }
-.container{
+/* .container{
     border: solid red;
-}
+} */
 
+/* top and bottom cards */
 .stack1{
-    border:solid green;
+    border:dotted green;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     position: fixed;
+    align-items: center;
     z-index:2;
     width: 25vw;
-    height:60vh;
+    height:80vh;
 margin-left:35%;
 }
+
+/* left and right cards */
 .stack2{
     border:solid orange;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 80vw;
-    height:30vh;
-margin-left:8%;
+    width: 65vw;
+    /* height:30vh; */
+margin-left:15%;
+margin-top:15%;
 }
 .card{
     border:solid blue;
-    height:250px;
-    width: 150px;
-    border-radius: 10%
+    height:275px;
+    width: 200px;
+    border-radius: 10%;
+    text-align:center;
+    font-size: 1.5em;
+    font-weight: bold;
+    color:white;
+    background-color: black;
 }
