--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+header{
+    display:flex;
+    justify-content:space-between;
+}
+.scoreContainer{
+    display:flex;
+    justify-content: space-around;
+    border:solid red;
+    height:100px;
+    width:300px;
+}
+.score{
+    border: solid;
+    font-size: 3em;
+    text-align: right;
+    width:100px;
+    height:50px;
+    margin-top:30px;
+}
 h1{
 font-size: 3em;
 }
