--- a/style.css
+++ b/style.css
@@ -10,17 +10,18 @@ header{
 .scoreContainer{
     display:flex;
     justify-content: space-around;
-    border:solid red;
+    /* border:solid red; */
     height:100px;
     width:300px;
 }
 .score{
-    border: solid blue;
+    /* border: solid blue; */
     font-size: 3em;
     text-align: right;
     width:125px;
     height:50px;
     margin-top:40px;
+    margin-right:30px;
 }
 h1{
 font-size: 3.5em;
@@ -35,7 +36,7 @@ span{
 
 /* top and bottom cards */
 .stack1{
-    border:dotted green;
+    /* border:dotted green; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -49,7 +50,7 @@ margin-left:35%;
 
 /* left and right cards */
 .stack2{
-    border:solid orange;
+    /* border:solid orange; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -59,7 +60,7 @@ margin-left:15%;
 margin-top:15%;
 }
 .card{
-    border:solid blue;
+    border:solid white;
     height:275px;
     width: 200px;
     border-radius: 10%;
