--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header{
     height:50px;
     margin-top:40px;
     margin-right:30px;
+    text-shadow: 3px 3px 3px rgb(209, 90, 110);
 }
 h1{
 font-size: 3.5em;
@@ -29,6 +30,9 @@ text-shadow: 3px 3px 3px rgb(209, 90, 110);
 }
 span{
     font-style: italic;
+}
+audio{
+    outline: none;
 }
 /* .container{
     border: solid red;
@@ -57,7 +61,7 @@ margin-left:35%;
     width: 65vw;
     /* height:30vh; */
 margin-left:15%;
-margin-top:15%;
+margin-top:10%;
 }
 .card{
     border:solid white;
