--- a/style.css
+++ b/style.css
@@ -1,104 +1,138 @@
-body{
+body {
     /* image from Google Images */
-    background-image: url(Images/galaxy-background-2981.jpeg);
+    background-image: url(Images/cardBackground.jpg);
+    /* background-image: url(Images/galaxy-background-2981.jpeg); */
 }
-header{
-    display:flex;
-    justify-content:space-between;
+
+header {
+    display: flex;
+    justify-content: space-between;
     color: white;
 }
-.scoreContainer{
-    display:flex;
+
+.scoreContainer {
+    display: flex;
     justify-content: space-around;
     /* border:solid red; */
-    height:100px;
-    width:300px;
+    height: 100px;
+    width: 300px;
 }
-.score{
+
+.score {
     /* border: solid blue; */
     font-size: 3em;
     text-align: right;
-    width:125px;
-    height:50px;
-    margin-top:40px;
-    margin-right:30px;
+    width: 125px;
+    height: 50px;
+    margin-top: 40px;
+    margin-right: 30px;
     text-shadow: 3px 3px 3px rgb(209, 90, 110);
 }
-h1{
-font-size: 3.5em;
-text-shadow: 3px 3px 3px rgb(209, 90, 110);
+
+h1 {
+    font-size: 3.5em;
+    text-shadow: 3px 3px 3px rgb(209, 90, 110);
 }
-span{
+
+span {
     font-style: italic;
 }
-audio{
+
+audio {
     outline: none;
 }
+
 /* .container{
     border: solid red;
 } */
 
 /* top and bottom cards */
-.stack1{
+.stack1 {
     /* border:dotted green; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     position: absolute;
     align-items: center;
-    z-index:2;
+    z-index: 2;
     width: 25vw;
-    height:80vh;
-margin-left:35%;
+    height: 80vh;
+    margin-left: 40%;
 }
 
 /* left and right cards */
-.stack2{
+.stack2 {
     /* border:solid orange; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 65vw;
     /* height:30vh; */
-margin-left:15%;
-margin-top:10%;
+    margin-left: 20%;
+    margin-top: 10%;
 }
-.card{
-    border:solid white;
-    height:275px;
+
+.card {
+    border: solid white;
+    height: 275px;
     width: 200px;
     border-radius: 10%;
-    text-align:center;
+    text-align: center;
     font-size: 1.5em;
     font-weight: bold;
-    color:white;
+    color: white;
     background-color: black;
+    padding-top: 20px;
 }
 
-.modal{
+.modal {
     position: fixed;
-    z-index:20;
-    height: 70vh;
-    width: 70vw;
-    border: solid red;
-    margin-left:15vw;
-    margin-bottom: 10vh;
+    top:0;
+    left:0;
+    z-index: 5;
+    height: 100%;
+    width: 100%;
+    /* border: solid red; */
+    padding: 5% 20%;
+    background-color:rgba(141, 138, 138, 0.8);
+    display: none;
 }
-.question{
-    border: solid yellow;
-    height:300px;
-    width:300px;
+.close{
+    position: relative;
+    top:0;
+    text-align: right;
+    font-size: 2em;
+    cursor: pointer;
 }
-.answers{
-    border: solid blue;  
-}
-.answerbox{
-    border: solid green;
-    height:30px;
-    width:300px;
+.question {
+    /* border: solid yellow; */
+    height: 20%;
+    width: 60%;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    background-color: rgb(158, 92, 221);
 }
 
+.answers {
+    /* border: solid blue; */
+    width: 60%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
 
+.answerbox {
+    /* border: solid green; */
+    height: 100px;
+    width: 500px;
+    font-size: 3em;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    text-align: center;
+    background-color: rgb(158, 92, 221);
+}
 
 
 
