--- a/style.css
+++ b/style.css
@@ -103,9 +103,8 @@ border:solid yellow;
 .close{
     position: relative;
     top:0;
-    text-align: right;
+    text-align: left;
     font-size: 2em;
-    cursor: pointer;
 }
 
 .close:hover{
