--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ audio {
 }
 .card:hover{
 border:solid yellow;
+cursor: pointer;
 }
 
 .modal {
@@ -143,9 +144,63 @@ border:solid yellow;
 }
 .answerbox:hover{
     color:yellow;
+    cursor: pointer;
 }
 
+.modal2 {
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: 5;
+    height: 100%;
+    width: 100%;
+    /* border: solid red; */
+    padding: 5% 20%;
+    background-color:rgba(141, 138, 138, 0.8);
+    display: none;
+}
+.close2{
+    position: relative;
+    top:0;
+    text-align: left;
+    font-size: 2em;
+}
 
+.close2:hover{
+    color:yellow;
+}
+.question2 {
+    /* border: solid yellow; */
+    height: 20%;
+    width: 60%;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    background-color: rgb(158, 92, 221);
+    text-align:center;
+}
 
+.answers2 {
+    /* border: solid blue; */
+    width: 60%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
 
-/* add keyframe animation to modal */
+.answerbox2 {
+    /* border: solid green; */
+    height: 100px;
+    width: 500px;
+    font-size: 3em;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    text-align: center;
+    background-color: rgb(158, 92, 221);
+    cursor: pointer;
+}
+.answerbox2:hover{
+    color:yellow;
+    cursor: pointer;
+}
