--- a/style.css
+++ b/style.css
@@ -204,3 +204,119 @@ cursor: pointer;
     color:yellow;
     cursor: pointer;
 }
+
+.modal3 {
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: 5;
+    height: 100%;
+    width: 100%;
+    /* border: solid red; */
+    padding: 5% 20%;
+    background-color:rgba(141, 138, 138, 0.8);
+    display: none;
+}
+.close3{
+    position: relative;
+    top:0;
+    text-align: left;
+    font-size: 2em;
+}
+
+.close3:hover{
+    color:yellow;
+}
+.question3 {
+    /* border: solid yellow; */
+    height: 20%;
+    width: 60%;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    background-color: rgb(158, 92, 221);
+    text-align:center;
+}
+
+.answers3 {
+    /* border: solid blue; */
+    width: 60%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.answerbox3 {
+    /* border: solid green; */
+    height: 100px;
+    width: 500px;
+    font-size: 3em;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    text-align: center;
+    background-color: rgb(158, 92, 221);
+    cursor: pointer;
+}
+.answerbox3:hover{
+    color:yellow;
+    cursor: pointer;
+}
+
+.modal4 {
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: 5;
+    height: 100%;
+    width: 100%;
+    /* border: solid red; */
+    padding: 5% 20%;
+    background-color:rgba(141, 138, 138, 0.8);
+    display: none;
+}
+.close4{
+    position: relative;
+    top:0;
+    text-align: left;
+    font-size: 2em;
+}
+
+.close4:hover{
+    color:yellow;
+}
+.question4 {
+    /* border: solid yellow; */
+    height: 20%;
+    width: 60%;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    background-color: rgb(158, 92, 221);
+    text-align:center;
+}
+
+.answers4 {
+    /* border: solid blue; */
+    width: 60%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.answerbox4 {
+    /* border: solid green; */
+    height: 100px;
+    width: 500px;
+    font-size: 3em;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    text-align: center;
+    background-color: rgb(158, 92, 221);
+    cursor: pointer;
+}
+.answerbox4:hover{
+    color:yellow;
+    cursor: pointer;
+}
